# job-market-monitor-scrapper

./: .gitignore  performance.md  pyproject.toml  requirements.txt
jmms/: __init__.py  config.py  jobs.csv  main.py
jmms/data/: jobs-1.csv  jobs-2.csv  jobs-3.csv
jmms/utils/: __init__.py  client.py  htmlparser.py  util.py
job-market-monitor-scrapper/: config.py  jobs.csv  main.py
job-market-monitor-scrapper/utils/: __init__.py  client.py  util.py
tests/utils/: test_util.py
